--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -6,3 +6,15 @@ html,body,#app{
   padding: 0px;
   box-sizing: border-box;
 }
+.el-breadcrumb{
+  margin-bottom: 20px;
+}
+.el-card {
+  box-shadow: 0, 1px, 1px, rgba(0, 0, 0, 0.15)!important;
+}
+.el-table {
+  margin-top: 20px;
+}
+.el-pagination{
+  margin-top: 20px;
+}
